# protopy

./: .gitignore  README.md  debug.py  debug_old.py  pyproject.toml  requirements.txt  test.py
docs/: README.md  SUMMARY.md  contributing.md  get-started.md  installation.md  packets-listeners.md
docs/packets/: README.md  make-packets.md
protopy/: __init__.py  client.py  debug.py  debug_ping.py  example.py  protopy.py
protopy/client/: tcpclient.py
protopy/datatypes/: bitset.py  buffer.py  datatypes.py  varint.py
protopy/packets/: __init__.py  buffer.py  packet.py  packetreader.py
protopy/packets/clientbountpackets/: __init__.py  clientboundpacket.py
protopy/packets/clientbountpackets/configuration/: finishconfigurationpacket.py
protopy/packets/clientbountpackets/login/: loginsuccess.py  setcompression.py
protopy/packets/clientbountpackets/play/: clientboundkeepalive.py  disconnectplay.py  playerchatmessage.py
protopy/packets/clientbountpackets/status/: pingresponse.py  statusresponse.py
protopy/packets/configuration/serverbound/: clientinformationconfiguration.py
protopy/packets/handshaking/serverbound/: handshake.py
protopy/packets/login/serverbound/: loginacknowledged.py  loginstart.py
protopy/packets/serverboundpackets/: __init__.py  serverboundpacket.py
protopy/packets/serverboundpackets/configuration/: clientinformationconfiguration.py  finishconfigurationpacket.py
protopy/packets/serverboundpackets/handshaking/: handshake.py
protopy/utils/: __init__.py  getuuid.py  logger.py
scripts/: format.sh
tests/: test_status.py
(+9 files in other folders)
