[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "protopy"
version = "0.0.1"
authors = [
  { name="Francesco De Caro", email="francesco.decaro.dev@gmail.com" },
]
description = "Minecraft protocol in python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FrahHS/protopy"
Issues = "https://github.com/FrahHS/protopy/issues"

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
